<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">
    <item android:title="@string/my_ads2" android:id="@+id/id_ads_cat">
        <menu>
            <item android:title="@string/others_ads"
                android:id="@+id/id_others_ads"
                android:icon="@drawable/ic__all_ads"/>

            <item android:title="@string/my_ads"
            android:id="@+id/id_ads"
            android:icon="@drawable/ic_myads"/>


            <item android:title="@string/fv_ads"
                android:id="@+id/fv_ads"
                android:icon="@drawable/ic_fav_selected"/>
        <item android:title="@string/cars_ads"
            android:id="@+id/id_cars"
            android:icon="@drawable/ic_cars"/>
        <item android:title="@string/pc_ads"
            android:id="@+id/id_pc"
            android:icon="@drawable/ic_computers"/>
        <item android:title="@string/smartpone_ads"
            android:id="@+id/id_smartphone"
            android:icon="@drawable/ic_smart"/>
        <item android:title="@string/dm_ads"
            android:id="@+id/id_dm"
            android:icon="@drawable/ic_dm"/>
        </menu>


    </item>


    <item android:title="@string/accaunt" android:id="@+id/id_cat">
        <menu>
            <item android:title="@string/sign_up"
                android:id="@+id/id_sign_up"
                android:icon="@drawable/ic_sign_up"/>
            <item android:title="@string/sign_in"
                android:id="@+id/id_sign_in"
                android:icon="@drawable/ic_sign_in"/>
            <item android:title="@string/sign_out"
                android:id="@+id/id_sign_out"
                android:icon="@drawable/ic_sign_out"/>

        </menu>


    </item>




</menu>