<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.FilterActivity">

    <TextView
        android:id="@+id/countrytitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/select_filter_country"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/citytitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/select_filter_city"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/countrytitle"
        app:layout_constraintTop_toBottomOf="@+id/tvCountry" />

    <TextView
        android:id="@+id/pricetitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/select_filter_index"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/countrytitle"
        app:layout_constraintTop_toBottomOf="@+id/tvCity" />

    <TextView
        android:id="@+id/tvCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="onClickCountry"
        android:text="@string/select_country_text_filter"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/countrytitle"
        app:layout_constraintTop_toBottomOf="@+id/countrytitle" />

    <TextView
        android:id="@+id/tvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onClickCity"
        android:text="@string/select_city_text_filter"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/tvCountry"
        app:layout_constraintTop_toBottomOf="@+id/citytitle" />

    <EditText
        android:id="@+id/edMaxPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/select_filter_index_hint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/pricetitle"
        app:layout_constraintStart_toStartOf="@+id/pricetitle"
        app:layout_constraintTop_toBottomOf="@+id/pricetitle" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/use_filter"
        app:layout_constraintStart_toStartOf="@+id/edMaxPrice"
        app:layout_constraintTop_toBottomOf="@+id/edMaxPrice" />
</androidx.constraintlayout.widget.ConstraintLayout>