<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager2"
        android:layout_width="0dp"
        android:layout_height="200dp"


        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        android:layout_marginEnd="8dp"
        android:background="@drawable/ed_bg"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/ItemTitile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/ed_bg"
        android:ems="10"
        android:hint="@string/editTitile"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/view_pager2"
        app:layout_constraintStart_toStartOf="@+id/view_pager2"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/tvImagesCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ed_bg"
        android:padding="5dp"
        android:text="0/0"
        android:textColor="@color/teal_200"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/view_pager2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:onClick="onClickImage"
        app:layout_constraintEnd_toEndOf="@+id/view_pager2"
        app:layout_constraintTop_toTopOf="@+id/view_pager2"
        app:srcCompat="@drawable/gallery" />

    <EditText
        android:id="@+id/itemPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/ed_bg"
        android:ems="10"
        android:hint="@string/editprice"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/ItemTitile"
        app:layout_constraintStart_toStartOf="@+id/ItemTitile"
        app:layout_constraintTop_toBottomOf="@+id/ItemTitile" />

    <EditText
        android:id="@+id/ItemTel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/ed_bg"
        android:ems="10"
        android:hint="@string/editTel"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/ItemTitile"
        app:layout_constraintStart_toStartOf="@+id/ItemTitile"
        app:layout_constraintTop_toBottomOf="@+id/itemPrice" />

    <EditText
        android:id="@+id/edDesc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/ed_bg"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/editdisc"
        android:inputType="textMultiLine|textPersonName"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ItemTitile"
        app:layout_constraintStart_toStartOf="@+id/ItemTitile"
        app:layout_constraintTop_toBottomOf="@+id/Tvemail" />

    <EditText
        android:id="@+id/Tvemail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/ed_bg"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/ItemTitile"
        app:layout_constraintStart_toStartOf="@+id/ItemTitile"
        app:layout_constraintTop_toBottomOf="@+id/ItemTel" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/spinner_dropdown_background"
        app:layout_constraintEnd_toEndOf="@+id/ItemTitile"
        app:layout_constraintStart_toStartOf="@+id/ItemTitile"
        app:layout_constraintTop_toBottomOf="@+id/view_pager2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:onClick="onClickSave"
        app:backgroundTint="@color/nav_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_save" />

</androidx.constraintlayout.widget.ConstraintLayout>