<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200">
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ed_bg"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvImagesCounter2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ed_bg"
            android:padding="5dp"
            android:text="TextView"
            android:textColor="@color/teal_200"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/view_pager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
                <TextView
                    android:id="@+id/tvTitle_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/ed_bg"
                    android:gravity="center"
                    android:padding="10dp"
                    android:scrollbars="vertical"
                    android:text="TextView"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/view_pager"
                    app:layout_constraintStart_toStartOf="@+id/view_pager"
                    app:layout_constraintTop_toBottomOf="@+id/view_pager" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/linear_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/showadd_bg"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle_1"
                app:layout_constraintVertical_bias="0.03">

                <TextView
                    android:id="@+id/tvPriceDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/showadd_bg"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/price"
                    android:textColor="@color/grey"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/showadd_bg"
                    android:gravity="left"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="italic" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_price"
                app:layout_constraintVertical_bias="0.01">


                <TextView
                    android:id="@+id/tvTelDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/showadd_bg"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/tel"
                    android:textColor="@color/grey"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvTel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/showadd_bg"
                    android:gravity="left"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_tel"
                app:layout_constraintVertical_bias="0.01">

                <TextView
                    android:id="@+id/Tvemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/showadd_bg"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/emailAdd"
                    android:textColor="@color/grey"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvemail_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/showadd_bg"
                    android:gravity="left"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_country"
                android:layout_width="match_parent"
                android:layout_marginBottom="4dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_email"
                app:layout_constraintVertical_bias="0.01">


                <TextView
                    android:id="@+id/tvCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/showadd_bg"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/country"
                    android:textColor="@color/grey"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/showadd_bg"
                    android:gravity="left"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_city"
                android:layout_width="match_parent"
                android:layout_marginBottom="4dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_country"
                app:layout_constraintVertical_bias="0.01">

                <TextView
                    android:id="@+id/tvCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/showadd_bg"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/city"
                    android:textColor="@color/grey"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/showadd_bg"
                    android:gravity="left"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="italic" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear_village"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_city"
                app:layout_constraintVertical_bias="0.01">

                <TextView
                    android:id="@+id/tvVillage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/showadd_bg"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/village_text"
                    android:textColor="@color/grey"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_village"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/showadd_bg"
                    android:gravity="left"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="italic" />


            </LinearLayout>


            <TextView
                android:id="@+id/tvTitle_2"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/showadd_bg"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:text="Описание"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/linear_email"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/linear_email"
                app:layout_constraintTop_toBottomOf="@+id/linear_village" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="32dp"
                android:clickable="true"
                android:onClick="OnClckEmail"
                app:srcCompat="@android:drawable/ic_dialog_email"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="280dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="bottom|right"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="32dp"
                android:clickable="true"
                app:srcCompat="@android:drawable/sym_action_call"
                android:onClick="OnClckCall"/>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

